aap-product-docs-plaintext/red_hat_content/documentation/red_hat_ansible_automation_platform/2.5/access_management_and_authentication/proc-controller-creating-a-user.md
# 4. Managing access with role-based access control
## 4.3. Users
### 4.3.2. Creating a user




There are three types of users in Ansible Automation Platform:

**Procedure**

1. From the navigation panel, selectAccess Management→Users.
1. ClickCreate user.
1. Enter the details about your new user in the fields on the **Create user** page. Fields marked with an asterisk (*) are required.
1. Normal users are the default when no **User type** is specified. To define a user as an administrator or auditor, select a **User type** checkbox.

Note
If you are modifying your own password, log out and log back in again for it to take effect.




1. Select the **Organization** to be assigned for this user. For information about creating a new organization, see [Creating an organization](https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html-single/access_management_and_authentication/index#proc-controller-create-organization) .
1. ClickCreate user.


**Next steps**

When the user is successfully created, the **User** dialog opens. From here, you can review and change the user’s Teams, Roles, Tokens and other membership details.


Note
If the user is not newly-created, the details screen displays the last login activity of that user.



If you log in as yourself, and view the details of your user profile, you can manage tokens from your user profile by selecting the **Tokens** tab For more information, see [Adding a token](https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html-single/access_management_and_authentication/index#proc-controller-apps-create-tokens) .

